# strelka

./: .gitignore  pyproject.toml  pytest.ini
.github/workflows/: backend-publish.yml  docker-publish.yml  frontend-publish.yml  manager-publish.yml  style_automation.yml
configs/go/frontend/: frontend.yaml
configs/go/manager/: manager.yaml
configs/python/backend/: backend.yaml
docs/: README.md
misc/kubernetes/: backend-configmap.yaml  frontend-configmap.yaml  manager-configmap.yaml
src/go/cmd/strelka-frontend/: main.go
src/go/cmd/strelka-manager/: main.go
src/go/pkg/structs/: structs.go
src/python/: setup.py
src/python/strelka/: __init__.py  __main__.py  exceptions.py  strelka.py  testing.py
src/python/strelka/auxiliary/: gif.py  indicators.py  urls.py
src/python/strelka/backend/: __init__.py  local.py  redis.py  task.py
src/python/strelka/config/: __init__.py  backend.yaml  logging.yaml
src/python/strelka/cstructs/: onenote.py
src/python/strelka/model/: __init__.py  base.py  event.py  file.py  indicator.py  rule.py  serialize.py  types.py
src/python/strelka/plugins/: __init__.py  metadata.py
src/python/strelka/scanners/: __init__.py  scan_antiword.py  scan_base64.py  scan_batch.py  scan_bmp_eof.py  scan_bzip2.py  scan_capa.py  scan_cart.py  scan_ccn.py  scan_clamav.py  scan_cuckoo.py  scan_delay.py  scan_dmg.py  scan_docx.py  scan_donut.py  scan_elf.py  scan_email.py  scan_encrypted_doc.py  scan_encrypted_zip.py  scan_entropy.py  scan_exception.py  scan_exiftool.py  scan_falcon_sandbox.py  scan_footer.py  scan_gif_eof.py  scan_gzip.py  scan_header.py  scan_html.py  scan_ini.py  scan_iqy.py  scan_iso.py  scan_jar_manifest.py  scan_javascript.py  scan_jnlp.py  scan_jpeg_eof.py  scan_json.py  scan_libarchive.py  scan_lnk.py  scan_lsb.py  scan_lzma.py  (+43 more)
src/python/strelka/telemetry/: __init__.py  traces.py
src/python/strelka/tests/: __init__.py  conftest.py  test_scan_base64.py  test_scan_batch.py  test_scan_bmp_eof.py  test_scan_bzip2.py  test_scan_capa.py  test_scan_cart.py  test_scan_ccn.py  test_scan_clamav.py  test_scan_delay.py  test_scan_dmg.py  test_scan_docx.py  test_scan_donut.py  test_scan_elf.py  test_scan_email.py  test_scan_encrypted_doc.py  test_scan_encrypted_zip.py  test_scan_entropy.py  test_scan_nf.py  (+51 more)
src/python/tests/: conftest.py  test_config.yml  test_required_for_scanner.py  test_scan_base64.py  test_scan_batch.py  test_scan_bmp_eof.py  test_scan_bzip2.py  test_scan_capa.py  test_scan_cart.py  test_scan_ccn.py  test_scan_clamav.py  test_scan_delay.py  test_scan_dmg.py  test_scan_docx.py  test_scan_donut.py  test_scan_elf.py  test_scan_email.py  test_scan_encrypted_doc.py  test_scan_encrypted_zip.py  test_scan_entropy.py  test_scan_exception.py  test_scan_exiftool.py  test_scan_footer.py  test_scan_gif_eof.py  test_scan_gzip.py  test_scan_header.py  test_scan_html.py  test_scan_ini.py  test_scan_iqy.py  test_scan_iso.py  test_scan_javascript.py  test_scan_jnlp.py  test_scan_jpeg_eof.py  test_scan_json.py  test_scan_libarchive.py  test_scan_lnk.py  test_scan_lzma.py  test_scan_macho.py  test_scan_manifest.py  test_scan_msi.py  (+33 more)
(+13 files in other folders)
